fixed ssh and horizontal scroll bar

--- a/main.css
+++ b/main.css
@@ -149,7 +149,7 @@ form.chat {
   border-bottom-left-radius: 30px 0px\9; }
   .fromThem ::-webkit-scrollbar {
     width: 10px;
-    height: 18px; }
+    height: 3px; }
   .fromThem ::-webkit-scrollbar-track {
     background-color: #E5E5EA; }
   .fromThem ::-webkit-scrollbar-thumb {
